--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,12 @@
-name: CI
-on:
-  push:
-    branches: [main]
+name: Build
+
+on: [push, pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    
     steps:
-
     - name: Checkout code
       uses: actions/checkout@v2
     
@@ -24,3 +22,4 @@ jobs:
     
     - name: Check Kivy version
       run: python -c "import kivy; print(f'Kivy version: {kivy.__version__}')"
+
