--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,20 +5,21 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-        
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install kivy
-    
-    - name: Check Kivy version
-      run: python -c "import kivy; print(f'Kivy version: {kivy.__version__}')"
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install kivy
+
+      - name: Check Kivy version
+        run: |
+          python -c "import kivy; print(f'Kivy version: {kivy.__version__}')"
