--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,3 +44,37 @@ jobs:
           python -m pip install -U .
           python -c "import brainflow; "
           # Add commands here to compile brainflow, e.g., ./configure, make, etc.
+
+
+          #---compile with buildozer
+
+          # used to cache dependencies with a timeout
+          - name: Get Date
+            id: get-date
+            run: |
+              echo "::set-output name=date::$(/bin/date -u "+%Y%m%d")"
+            shell: bash
+
+          - name: Cache Buildozer global directory
+            uses: actions/cache@v2
+            with:
+              path: .buildozer_global
+              key: buildozer-global-${{ hashFiles('buildozer.spec') }} # Replace with your path
+
+          - uses: actions/cache@v2
+            with:
+              path: .buildozer
+              key: ${{ runner.os }}-${{ steps.get-date.outputs.date }}-${{ hashFiles('buildozer.spec') }}
+
+          - name: Build with Buildozer
+            uses: ArtemSBulgakov/buildozer-action@v1
+            id: buildozer
+            with:
+              command: buildozer android debug
+              buildozer_version: master
+
+          - name: Upload artifacts
+            uses: actions/upload-artifact@v2
+            with:
+              name: package
+              path: ${{ steps.buildozer.outputs.filename }}
