--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,8 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2        with:
+          node-version: 16 # Specify the desired Node.js version
 
       - name: Set up Python
         uses: actions/setup-python@v2
@@ -51,7 +52,8 @@ jobs:
       - name: Get Date
         id: get-date
         run: |
-          echo "::set-output name=date::$(/bin/date -u "+%Y%m%d")"
+          # echo "::set-output name=date::$(/bin/date -u "+%Y%m%d")"
+          echo "date=$(date -u "+%Y%m%d")" >> $GITHUB_ENV
         shell: bash
 
       - name: Cache Buildozer global directory
