--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,10 +18,10 @@ jobs:
           cache-name: cache-buildozer-and-brainbay
         with:
           path: |
-            ./.buildozer_global
-            ./.buildozer
-            ./brainflow
-            ./.venv
+            .buildozer_global
+            .buildozer
+            brainflow
+            .venv
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-
@@ -33,7 +33,7 @@ jobs:
         continue-on-error: true
         run: |
           python -m venv ./.venv
-          ./.venv/bin/activate
+          source ./.venv/bin/activate
           echo "currennt dir:"
           pwd
           # pip install -r requirements.txt
@@ -49,7 +49,7 @@ jobs:
         name: List contents of cache
         continue-on-error: true
         run: |
-          ./.venv/bin/activate
+          source ./.venv/bin/activate
           echo "----(venv) pip list---"
           pip list
           echo "----content of .buildozer---"
