--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
+          cache: "pip" # caching pip dependencies
+
       # define a cache
       - name: load and define Cached folders
         id: cache-buildozer
@@ -20,7 +25,7 @@ jobs:
           path: |
             .buildozer_global
             .buildozer
-            .venv
+            #.venv
             brainflow
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('buildozer.spec') }}
           restore-keys: |
@@ -62,26 +67,26 @@ jobs:
 
       - name: pip venv start / create
         run: |
-          if [ ! -d ".venv" ]; then
-            echo "create venv in .venv"
-            python -m venv ./.venv
-          else
-            echo "pip venv found in cached folder: .venv"
-          fi
-          source ./.venv/bin/activate
-          # every run starts a new bash, so variables like PATH will just be set new
-          # venv works because it prepends $VIRTUAL_ENV to $PATH
-          # to keep the variable: echo PATH=$PATH >> $GITHUB_ENV
-          # or source the venv every run..
-          #  there is also the option to add to $PATH through (will be loaded every run, 
-          #  but might be overridden by $GITHUB_ENV?)
-          #  echo "newPath" >> $GITHUB_PATH
-          # one way to retrieve var in $GITHUB_ENV is with:
-          #  echo "${{ env.someVariable }}" 
-          echo "PATH=$PATH" >> $GITHUB_ENV
-          echo "VIRTUAL_ENV=$VIRTUAL_ENV" >> $GITHUB_ENV
-          echo "VIRTUAL_ENV_PROMPT=$VIRTUAL_ENV_PROMPT" >> $GITHUB_ENV
-          echo "MYTEST1=heoooo" >> $GITHUB_ENV
+          #   if [ ! -d ".venv" ]; then
+          #     echo "create venv in .venv"
+          #     python -m venv ./.venv
+          #   else
+          #     echo "pip venv found in cached folder: .venv"
+          #   fi
+          #   source ./.venv/bin/activate
+          #   # every run starts a new bash, so variables like PATH will just be set new
+          #   # venv works because it prepends $VIRTUAL_ENV to $PATH
+          #   # to keep the variable: echo PATH=$PATH >> $GITHUB_ENV
+          #   # or source the venv every run..
+          #   #  there is also the option to add to $PATH through (will be loaded every run, 
+          #   #  but might be overridden by $GITHUB_ENV?)
+          #   #  echo "newPath" >> $GITHUB_PATH
+          #   # one way to retrieve var in $GITHUB_ENV is with:
+          #   #  echo "${{ env.someVariable }}" 
+          #   echo "PATH=$PATH" >> $GITHUB_ENV
+          #   echo "VIRTUAL_ENV=$VIRTUAL_ENV" >> $GITHUB_ENV
+          #   echo "VIRTUAL_ENV_PROMPT=$VIRTUAL_ENV_PROMPT" >> $GITHUB_ENV
+          #   echo "MYTEST1=heoooo" >> $GITHUB_ENV
           if [ "$VIRTUAL_ENV_PROMPT" == "" ]; then
             echo "no venv yet loaded"
           else
@@ -127,7 +132,7 @@ jobs:
               echo "already downloaded git repository found in cache. go straight to comipling.. "
             fi
             cd brainflow
-            rm build/* -rf
+            #rm build/* -rf
             cd tools
             python build.py
             cd ../python_package
