--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
-brainflow @ file:///root/brainflow-master/python_package
+# pip freeze > requirements.txt
+# pip install -r requirements.txt
+# docopt == 0.6.1             # Version Matching. Must be version 0.6.1
+# keyring >= 4.1.1            # Minimum version 4.1.1
+# coverage != 3.5             # Version Exclusion. Anything except version 3.5
+# Mopidy-Dirble ~= 1.1        # Compatible release. Same as >= 1.1, == 1.*
+# numpy >= 1.0, <= 2.0        # later than 1.0 and smaller than 2.0
+# numpy                       # latest
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.1.0
