--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,18 @@ name: Build
 
 on: [push, pull_request]
 
+# # for a windows mashine.. krass
+# jobs:
+#   build:
+#     runs-on: windows-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#       - uses: actions/setup-dotnet@v1
+#       - name: Build
+#         run: dotnet build
+#       - name: Run tests
+#         run: dotnet test
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -195,6 +207,7 @@ jobs:
           buildozer_version: master
 
       # remove all prev arefacts (otherwise the artefacts quota might be triggered -its monthly)
+      # or set to public repo (maybe need to wait a while untill github updated the stats)
       - name: Delete Old Artifacts
         uses: actions/github-script@v6
         id: artifact
